se realizan cambios en la interfaz de usuario para mejorar la experiencia del usuario y agregar nuevas funcionalidades. Se han agregado nuevos archivos de configuración y se han modificado varios archivos de código fuente como para implementar estas mejoras.